# ParallaX

./: .gitignore  .gitleaks.toml  AGENTS.md  AI_USAGE.md  CODEX_PHASE_PLAN.md  CODEX_TASK_X25519MLKEM768.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  NOTICE  README.md  SECURITY.md  SPEC.md  deny.toml
.cargo/: mutants.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  semgrep-requirements.txt  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/claude-hooks/: guard-no-main-push.sh  settings.json
.github/scripts/: fuzz-report.sh  mutants_issue.py
.github/workflows/: cargo-deny.yml  cargo-geiger.yml  ci-fuzz-build.yml  ci-netem-bdp-bench.yml  ci-pr.yml  ci-quick.yml  ci-relay-teardown.yml  claude-audit.yml  claude-batch-review.yml  claude-dependency-audit.yml  claude-security-review.yml  claude.yml  codeql.yml  dudect.yml  e2e-gfw-lab.yml  fuzz-crash-triage.yml  fuzz-nightly.yml  fuzz-pr.yml  gitleaks.yml  kani.yml  miri.yml  mutants-autofix.yml  mutants-report.yml  nightly-mutants.yml  notify-site-redeploy.yml  osv-scanner.yml  release.yml  scorecard.yml  semgrep.yml  sync-wiki.yml  wiki-sidebar-check.yml  zizmor.yml
ParallaX-DeepWiki/: Camouflage-Target-Probe.md  Client-Runtime-&-SOCKS5-Proxy.md  ClientHello-Authentication-(PSK-+-X25519).md  ClientHello-Builder-&-Browser-Profiles.md  Configuration-Reference.md  Core-Architecture.md  Cover-Traffic.md  Cryptographic-Subsystems.md  Deployment.md  Documentation-Metadata-Search-Graph.md  GFW-Simulator-&-QUIC-Research.md  Getting-Started-&-CLI-Reference.md  Glossary-1.md  Glossary.md  HTTP-2-Fingerprinting.md  HTTP-3-Fingerprint-Facade.md  Hand-Rolled-ML-DSA-87.md  Padding-&-Timing-Profiles.md  ParallaX-Overview.md  Post-Quantum-Cryptography-(ML-KEM-&-ML-DSA).md  Probing-&-Benchmarking.md  Protocol-Benchmarks.md  Protocol-Commands-&-Data-Records.md  QUIC-Fast-Plane.md  QUIC-Origin-Splice-&-Active-Probing-Resistance.md  QUIC-Transport-(quic_runtime-&-Salamander).md  README.md  Replay-Protection.md  Secret-Store-&-Sealed-Configs.md  Server-Runtime-&-Probing-Resistance.md  Session-Key-Derivation-&-AEAD-Transport.md  Stateful-Rustls-Camouflage-Backend.md  Stateful-Safari-TLS-Camouflage-Backend.md  Systemd-Service-&-Security-Hardening.md  TCP-Camouflage-Transport.md  TLS-Camouflage-Layer.md  Traffic-Obfuscation.md  Transport-Layer.md  VPS-Deployment-Script.md  _Sidebar.md
ci/gfw-lab/: Cargo.toml  README.md  run-lab.sh  trafficgen-report.json
ci/gfw-lab/src/: analyze.rs  lib.rs  link.rs  report.rs  scenario.rs  stats.rs  tls.rs
crashes/tls_client_hello/: oom@rss=1024-crash-selftest
crashes/udp_reorder/: d690917382a0
fuzz/: Cargo.toml  client_hello_auth.dict  command_codecs.dict  data_record_open.dict  http2_frame_header.dict  mux_frame.dict  replay_journal.dict  run.sh  server_decide_inbound.dict  socks_connect_request.dict  tls_client_hello.dict  tls_compressed_cert.dict  tls_server_hello.dict  udp_envelope.dict  udp_reorder.dict
fuzz/ci/: select_targets.py  target-map.toml  test_select_targets.py
fuzz/dashboard/: index.html  status-box-a.json  status-box-b.json
fuzz/fuzz_targets/: client_hello_auth.rs  command_codecs.rs  data_record_open.rs  framed_reassembler.rs  h3_frame_decode.rs  h3_qpack_field_section.rs  h3_settings_parse.rs  http2_frame_header.rs  mldsa_verify.rs  mux_frame.rs  quic_certificate.rs  quic_certificate_verify.rs  quic_compressed_cert.rs  quic_encrypted_extensions.rs  quic_frame_decode.rs  quic_packet_header.rs  quic_server_hello.rs  quic_transport_params.rs  replay_dedup.rs  replay_journal.rs  server_decide_inbound.rs  socks_connect_request.rs  tls_client_hello.rs  tls_compressed_cert.rs  tls_server_hello.rs  udp_envelope.rs  udp_reorder.rs
fuzz/seeds/: gen_h1_seeds.py
fuzz/seeds/tls_compressed_cert/: seed_h1_withcapacity_16mib  seed_h1_zlib_bomb_3gib
ops/fuzz-cluster/: README.md  bootstrap.sh  liveness.yml
ops/fuzz-cluster/config/: journald-plxfuzz.conf  logrotate-plxfuzz  suppressions.txt
ops/fuzz-cluster/lib/: shard-table.sh
ops/fuzz-cluster/systemd/: crash-push@.service  plx-cmin.service  plx-cmin.timer  plx-crashscan.service  plx-crashscan.timer  plx-diskguard.service  plx-fuzz@.service  (+5 more)
scripts/: deploy-vps.sh  netem-bdp-bench.sh  uninstall-vps.sh
scripts/wiki_sync/: check_sidebar.py  convert.py  sync.sh  test_convert.py
src/: bench.rs  cli.rs  config.rs  lib.rs  main.rs  netmatrix.rs  probe.rs  process_hardening.rs  runtime_guard.rs  secret_store.rs  speed.rs  traffic.rs
src/client/: initial_payload.rs  mod.rs  runtime.rs  socks.rs
src/crypto/: auth.rs  identity.rs  mod.rs  parallel.rs  pq.rs  quic_marker.rs  replay.rs  session.rs
src/fingerprint/: http2.rs  http3.rs  mod.rs
src/handshake/: client.rs  mod.rs  server.rs  source_limit.rs  transcript.rs
src/protocol/: command.rs  data.rs  mod.rs
src/tls/: backend.rs  client_hello.rs  client_hello_builder.rs  mod.rs  record.rs  safari26.rs  safari_shape.rs  server_hello.rs  stateful.rs
src/transport/: leg.rs  mod.rs  quic.rs  quic_runtime.rs  tcp.rs
src/util/: hex.rs  mod.rs
tests/: chaos_liveness.rs  chrome_parity_baseline.rs  ci_test_allowlist_complete.rs  distinguisher_battery.rs  e2e_tunnel_roundtrip.rs  gfw_live_replay.rs  gfw_sim_provenance.rs  gfw_simulator.rs  ja4_census_oracle.rs  mldsa_acvp.rs  mldsa_differential.rs  no_timeout_ratchet.rs  prober_loop.rs  safari_clienthello.rs  safari_h2_parity_baseline.rs  safari_h3_clienthello_0rtt_baseline.rs  safari_h3_clienthello_baseline.rs  safari_parity_baseline.rs  splice_equivalence.rs
tests/distinguisher/: classifier.rs  features.rs  mod.rs  parallax_source.rs  perturb.rs  safari_h3_source.rs  safari_quic_source.rs  safari_source.rs  stats.rs  trace.rs  udp_capture.rs  udp_tsv.rs
tests/fixtures/: safari26_h3_0rtt_udp_records.tsv  safari26_h3_udp_records.tsv  safari26_quic_udp_records.tsv  safari26_tcp_bigpost_records.tsv  safari26_tcp_records.tsv  safari26_traffic_pattern_capture_2026-06.json
tests/gfw_sim/: fixtures.rs  mod.rs
tests/support/: census.rs
(+75 files in other folders)
