[package]
name = "parallax"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "ParallaX censorship-resistant proxy protocol core"
license = "PolyForm-Noncommercial-1.0.0"
default-run = "parallax"

# The `fuzzing` cfg is set automatically by cargo-fuzz and `kani` by cargo-kani.
# Declare both here so normal and CI builds (which never set them) don't emit
# unexpected_cfgs warnings for the #[cfg(fuzzing)] fuzz-only hooks and the
# #[cfg(kani)] proof harnesses — keeping `-D warnings` green.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)', 'cfg(kani)'] }

[features]
# (No Safari-QUIC feature gate: the Safari-26 H3 ClientHello carrier — the
# clean-room QUIC + TLS stack (`src/transport/udp/quic` + `src/tls/quic`) — is the
# DEFAULT QUIC client backend in `udp::client_config`. The QUIC plane itself is
# gated at the config level by `[udp].enabled = false`, which is the real off-switch.)

# `dudect`: gate for the load-bearing constant-time WALL-CLOCK proof of the
# inbound-reject path (src/handshake/server.rs, `mod tests`). It runs a
# dudect-style Welch t-test over ~1e5–1e6 timed samples per reject shape, which is
# far too slow for the default `cargo test`. Default `cargo test` skips it; the
# dedicated `dudect.yml` CI job builds with `--features dudect` so a regression in
# the rejection path's data-dependent timing turns the build RED (a hard gate,
# not an #[ignore]d advisory). Sample count is tunable via the DUDECT_SAMPLES env
# var (default 1e5 for the PR lane; nightly raises it to 1e6).
dudect = []

[dependencies]
anyhow = "1"
aws-lc-rs = "1"
base64 = "0.22"
bytes = "1"
aes-gcm = "0.10"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
# QUIC header protection (RFC 9001 §5.4) for the hand-written QUIC TLS engine
# (src/tls/quic): a raw single-block AES-ECB mask for the AES suites (`aes` +
# the `cipher` BlockEncrypt trait) and the ChaCha20 keystream mask for the ChaCha
# suite (`chacha20` + the `cipher` StreamCipher trait). All three are ALREADY
# compiled into the tree transitively (`aes`/`cipher` via `aes-gcm`, `chacha20`
# via `chacha20poly1305`), so naming them directly adds no new crate, no download,
# and no audit surface — it only un-hides what the AEAD crates already pull in.
aes = "0.8"
chacha20 = "0.9"
cipher = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
flate2 = "1"
hkdf = "0.12"
hmac = "0.12"
libc = "0.2"
rand = "0.8"
rcgen = "0.13"
# Safe wrappers for the libc syscalls ParallaX makes directly (geteuid, flock,
# getrlimit/setrlimit, page_size, recv(MSG_PEEK), poll, splice, pipe2,
# sched_getcpu, prctl(PR_SET_DUMPABLE), and the TCP/socket options). Already in
# the tree transitively; pulled in directly so those call sites drop their
# `unsafe { libc::* }` blocks. The handful rustix does not cover stay on libc
# (mlock/madvise, macOS PT_DENY_ATTACH, FreeBSD procctl, SO_PREFER_BUSY_POLL).
rustix = { version = "1", features = ["event", "fs", "net", "param", "pipe", "process", "thread"] }
rustls = { version = "=0.23.40", features = ["std", "aws_lc_rs"] }
rustls-native-certs = "0.8.3"
rustls-pki-types = "1"
webpki = { package = "rustls-webpki", version = "0.103", default-features = false, features = ["std", "aws-lc-rs"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
# Hand-rolled ML-DSA-87 (crypto::mldsa) uses SHAKE128/256 from `sha3`. Pinned to
# 0.10 (NOT 0.11/0.12): sha3 0.12 moved to digest 0.11, which would fork the
# digest stack into two majors. Stays on the shared digest 0.10.x already pulled
# via sha2/hmac/hkdf — keeps `cargo tree -d` free of a duplicate digest.
# The `zeroize` feature scrubs the Keccak [u64;25] sponge state on drop: signing
# absorbs secret seeds (sk `key`, `rnd`, `mu`, `rhoprime`) into SHAKE, so the sponge
# holds a second copy beyond the named stack scrubs. zeroize is already in-tree
# (1.8.2) — no new crate, no digest-stack fork. Value-neutral (no byte impact).
sha3 = { version = "0.10", features = ["zeroize"] }
# Linux-only TCP/socket options rustix does not expose: TCP_NOTSENT_LOWAT and
# SO_BUSY_POLL. The `all` feature un-gates these (platform-specific) setters.
# Already transitive via tokio; the `all` feature is compile-time only.
socket2 = { version = "0.6", features = ["all"] }
subtle = "2.6"
thiserror = "2"
tokio = { version = "1.37", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
# ML-DSA-87 differential oracle (tests/mldsa_differential.rs only): the PQClean C
# FFI implementation the hand-rolled `crypto::mldsa` is cross-checked against. The
# production identity signer is `crypto::mldsa`; these are test-only since the
# cutover and must not re-enter [dependencies].
pqcrypto-mldsa = "0.1.2"
pqcrypto-traits = "0.3"
# ML-DSA-87 ACVP validation harness (tests/mldsa_acvp.rs): parse NIST ACVP JSON
# vectors and decode their uppercase-hex fields. Test-only; not runtime deps.
serde_json = "1"
hex = "0.4"
# Crypto used exclusively by the GFW simulator (tests/gfw_sim/):
# - md-5: JA3 fingerprint hash (matches the original JA3 spec)
# (`aes`/`cipher` moved to [dependencies] — the hand-written QUIC TLS engine uses
#  them for header protection; the simulator still sees them as normal deps.)
md-5 = "0.10"

[profile.profiling]
inherits = "release"
debug = 2
split-debuginfo = "off"
strip = false
lto = "thin"
codegen-units = 1

