[package]
name = "parallax-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Self-contained workspace: building under fuzz/ must not pull the parent
# package (which declares no [workspace]) into one.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.parallax]
path = ".."

# --- Targets -----------------------------------------------------------------
# All targets take raw &[u8] (attacker-influenced bytes). cargo-fuzz compiles
# the parallax crate with `--cfg fuzzing`, which is what makes the
# `tls::safari26::fuzz` re-export module below visible.

[[bin]]
name = "tls_client_hello"
path = "fuzz_targets/tls_client_hello.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tls_server_hello"
path = "fuzz_targets/tls_server_hello.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tls_compressed_cert"
path = "fuzz_targets/tls_compressed_cert.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mux_frame"
path = "fuzz_targets/mux_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "server_decide_inbound"
path = "fuzz_targets/server_decide_inbound.rs"
test = false
doc = false
bench = false

[[bin]]
name = "client_hello_auth"
path = "fuzz_targets/client_hello_auth.rs"
test = false
doc = false
bench = false
