[package]
name = "parallax-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Self-contained workspace: building under fuzz/ must not pull the parent
# package (which declares no [workspace]) into one.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
rand = "0.8"

[dependencies.parallax]
path = ".."

# --- Targets -----------------------------------------------------------------
# All targets take raw &[u8] (attacker-influenced bytes). cargo-fuzz compiles
# the parallax crate with `--cfg fuzzing`, which is what makes the
# `tls::safari26::fuzz` / `client::socks::fuzz` re-export modules visible.

[[bin]]
name = "tls_client_hello"
path = "fuzz_targets/tls_client_hello.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tls_server_hello"
path = "fuzz_targets/tls_server_hello.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tls_compressed_cert"
path = "fuzz_targets/tls_compressed_cert.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mux_frame"
path = "fuzz_targets/mux_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "server_decide_inbound"
path = "fuzz_targets/server_decide_inbound.rs"
test = false
doc = false
bench = false

[[bin]]
name = "client_hello_auth"
path = "fuzz_targets/client_hello_auth.rs"
test = false
doc = false
bench = false

[[bin]]
name = "command_codecs"
path = "fuzz_targets/command_codecs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "http2_frame_header"
path = "fuzz_targets/http2_frame_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "data_record_open"
path = "fuzz_targets/data_record_open.rs"
test = false
doc = false
bench = false

[[bin]]
name = "replay_journal"
path = "fuzz_targets/replay_journal.rs"
test = false
doc = false
bench = false

[[bin]]
name = "socks_connect_request"
path = "fuzz_targets/socks_connect_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "udp_envelope"
path = "fuzz_targets/udp_envelope.rs"
test = false
doc = false
bench = false
