[package]
name = "gfw-lab"
version = "0.1.0"
edition = "2021"
description = "ParallaX end-to-end lab: MITM GFW-style analyzer, link-impairment relay, local origin, and traffic scenario generator for CI."
license = "PolyForm-Noncommercial-1.0.0"
publish = false

# Isolate this crate from the parent `parallax` package so `cargo build` at the
# repo root never pulls it in, and so cargo does not try to attach it to a
# non-workspace parent. This crate is a self-contained CI/test harness.
[workspace]

[[bin]]
name = "gfw-box"
path = "src/bin/gfw_box.rs"

[[bin]]
name = "origin"
path = "src/bin/origin.rs"

[[bin]]
name = "trafficgen"
path = "src/bin/trafficgen.rs"

[[bin]]
name = "labreport"
path = "src/bin/labreport.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
anyhow = "1"

[profile.release]
opt-level = 2
